--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "weather apps cli",
   "main": "index.js",
   "repository": {
-    "url": "https://github.com/muhtarudinsiregar/weather-apps.git",
+    "url": "https://github.com/muhtarudinsiregar/random-quotes.git",
     "type": "git"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "muhtarudinsiregar",
   "license": "MIT",
