--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "weather-app",
+  "name": "random-quotes",
   "version": "1.0.0",
-  "description": "weather apps cli",
+  "description": "random apps cli",
   "main": "index.js",
   "repository": {
     "url": "https://github.com/muhtarudinsiregar/random-quotes.git",
